# robotframework-ghareports

./: .flake8  .gitignore  AGENTS.md  CHANGELOG.md  README.md  example_step_summary.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tasks.py
.github/workflows/: tests.yaml
example/: initial_suite.robot
example/multiple_suites/: secondary_suite.robot  ternary_suite.robot
example/resources/: example.resource
example/single_suite/: initial_suite.robot
src/: GHAReports.py  GHSummary.py  MDGen.py  mdgen.py
src/GHAReports/: GHAReports.py  __init__.py  __main__.py  cli.py  mdgen.py
utest/: test_all.py  tests.py
