[tool.ruff]
exclude = [
  ".git",
  "venv"
]
line-length = 130
indent-width = 2
respect-gitignore = true


[tool.ruff.lint]
select = ["E", "F", "W", "YTT", "BLE", "A", "COM", "PT", "Q", "RET", "ARG", "RUF"]
ignore = ["RUF012", "COM812","RUF100"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pdm.package-dir]
robotframework-ghareports = "src/"

[project]
name = "robotframework-ghareports"
version = "0.5.0"
description = "Simple github action summary report for robotframework"
readme = "README.md"
authors = [
    {name = "Jani Mikkonen", email = "jani.mikkonen@gmail.com"},
]


classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]
dependencies = [
    "robotframework >= 4.0.0",
    "wrapt",
]
license = {text = "GPLV3"}
requires-python = ">=3.8"

[project.scripts]
ghareports = "GHAReports.cli:main"


[project.urls]
Homepage = "https://github.com/rasjani/robotframework-ghareports"

[project.optional-dependencies]
dev = [
  "twine",
  "python-language-server[all]",
  "ruff",
  "invoke",
  "pdm",
  "pytest",
  "build"
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
