[tool.ruff]
exclude = [
  ".git",
  "venv",
  ".venv"
]
line-length = 130
indent-width = 2
respect-gitignore = true


[tool.ruff.lint]
select = ["E", "F", "W", "YTT", "BLE", "A", "COM", "PT", "Q", "RET", "ARG", "RUF"]
ignore = ["RUF012", "COM812","RUF100"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[project]
name = "robotframework-ghareports"
version = "0.9.2"
description = "Generate GitHub Actions job summaries from Robot Framework results"
readme = "README.md"
authors = [
    {name = "Jani Mikkonen", email = "jani.mikkonen@gmail.com"},
]


classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]
dependencies = [
    "robotframework >= 4.0.0",
    "wrapt",
]

license = {text = "GPLV3"}
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "twine",
    "python-language-server[all]",
    "invoke",
    "pytest-github-report",
]
[project.scripts]
ghareports = "GHAReports.cli:main"


[project.urls]
Homepage = "https://github.com/rasjani/robotframework-ghareports"
Repository = "https://github.com/rasjani/robotframework-ghareports"

[project.optional-dependencies]
dev = [
  "twine",
  "python-language-server[all]",
  "ruff",
  "invoke",
  "pytest",
  "pytest-github-report",
  "build"
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "GHAReports"
module-root = "src"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra "
testpaths = [
    "utest",
]
